--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^1.3.1",
+    "@react-native-community/async-storage": "^1.7.1",
     "@ui-kitten/components": "^4.3.2",
     "@ui-kitten/eva-icons": "^4.3.2",
     "moment": "^2.24.0",
@@ -19,6 +20,7 @@
     "react-native-device-info": "^5.4.0",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-keychain": "^4.0.4",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^3.4.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.22",
