--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/async-storage": "^1.7.1",
     "@ui-kitten/components": "^4.3.2",
     "@ui-kitten/eva-icons": "^4.3.2",
+    "expo-local-authentication": "^8.0.0",
     "moment": "^2.24.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
@@ -26,6 +27,7 @@
     "react-native-screens": "^2.0.0-alpha.22",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^9.13.6",
+    "react-native-unimodules": "^0.7.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
